Fixed contrast-error and missing labels after Wave-test

--- a/src/app/components/cart/mini-cart/mini-cart.component.scss
+++ b/src/app/components/cart/mini-cart/mini-cart.component.scss
@@ -133,6 +133,7 @@
     display: block;
     text-align: center;
     margin-inline: auto;
+    color: styles.$primary-red !important;
 }
 
 .clear {
