--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,10 +1,8 @@
 $primary-light: #F9F9F9; //Slight grey
 $primary-dark: #093340; //Blue-green
 $primary-red: #CA4444; //Red
-$primary-brown: #654C4F; //Brown
 $primary-beige: #F5F7DC; //Beige
-$primary-orange: #E77728; //Orange
-$white-color: #fff;
+$white-color: #fff; //White
 
 //Padding/Margin
 $base-padding: 0.75rem;
